syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.palette.grpc";

service GSocialService {
  rpc createUser (GCreateUserRequest) returns (GCreateUserResponse) {}
}

message GCreateUserRequest {
  int64 id = 2;
  string username = 3;
  string nickname = 4;
  string imagePath = 5;
  bool isActive = 6;
}

message GCreateUserResponse {
  bool message = 1;
}
